# json-starpc

./: LICENSE  LICENSE.txt  README.md  main.py  mypy.ini  pyproject.toml
jsonrpc/: applications.py  endpoints.py  errors.py  exceptions.py  functions.py  methods.py  responses.py  routing.py  utils.py  validation.py
jsonstarpc/: dataclasses.py  decorators.py  endpoints.py  exceptions.py  functions.py  responses.py  routing.py  types.py  utils.py  validation.py
src/jsonrpc/: applications.py  exceptions.py  methods.py  requests.py  types.py
tests/: test_functions.py  test_utils.py
