[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonstarpc_rykroon"
version = "0.0.1"
authors = [
  { name="Ryan Kroon", email="rykroon.tech@gmail.com" },
]
description = "A JSON RPC Framework built with Starlette."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rykroon/json-starpc"
"Bug Tracker" = "https://github.com/rykroon/json-starpc/issues"

[tool]
